[tool.poetry]
name = "topicmodelling"
version = "0.1.0"
description = ""
authors = ["Dun <dunxin.ong@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
nltk = "^3.8.1"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
